fixing styling issues on mobile

--- a/src/components/postListItem/postListItem.css
+++ b/src/components/postListItem/postListItem.css
@@ -7,9 +7,13 @@
   align-items: center;
   box-shadow: 0px 0px 10px lightgray;
   border-radius: 10px;
-  margin: 20px auto;
-  max-width: 400px;
+  margin: 10px 0;
   transition: transform 200ms, box-shadow 200ms; 
+}
+
+.post-list li {
+  width: 400px;
+  max-width: 92%;
 }
 
 .content-container {
