--- a/src/routes/login/login.css
+++ b/src/routes/login/login.css
@@ -14,12 +14,23 @@
 #login-form {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 200px;
 }
 
 input {
   font-size: 20px;
   border-radius: 10px;
-  /* border: 1px solid black; */
+  box-shadow: 0px 0px 5px;
+  width: 200px;
+  max-width: 80%;
+  border: none;
+  margin: 5px
+}
+
+label {
+  align-self: flex-start;
 }
 
 .button-container {
